# NAMix

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md  changelog.txt  release_notes_header.md
.github/workflows/: build.yml  release.yml
scripts/: makedist-linux.sh
src/: FileRow.h  GatewayLookAndFeel.h  GatewaySettingsPanel.h  LevelMeter.h  NAMixLookAndFeel.h  NAMixSettingsPanel.h  ParametricKnobLayout.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ToneStack.cpp  ToneStack.h
tests/: CMakeLists.txt  ParametricRangeTests.cpp  ParametricRowLayoutTests.cpp  StateRestoreTests.cpp  TestEditorStub.cpp  TestMain.cpp
